--- a/pasteit/views/index.ejs
+++ b/pasteit/views/index.ejs
@@ -32,6 +32,7 @@
                         <div id="paste-container">
                             <form name="paste" action="submitPaste" method="post">
                                 <div id="paste-header">
+                                    <input type="hidden" id="flavor" />
                                     <select id="language" name="language">
                                         <option value=""></option>
                                         <option selected value=""></option>
