issue #1 - Syntax Highlighting
Added MIME-Type Support

--- a/pasteit/views/index.ejs
+++ b/pasteit/views/index.ejs
@@ -32,7 +32,7 @@
                         <div id="paste-container">
                             <form name="paste" action="submitPaste" method="post">
                                 <div id="paste-header">
-                                    <input type="hidden" id="flavor" />
+                                    <input type="hidden" name="mime" id="mime" value=""></input>
                                     <select id="language" name="language">
                                         <option value=""></option>
                                         <option selected value=""></option>
