--- a/pasteit/views/pasted.ejs
+++ b/pasteit/views/pasted.ejs
@@ -18,6 +18,7 @@
     <body>
         <input type="hidden" id="pasted-content" class="pasted-content" value="<%= pastedcontent %>" />
         <input type="hidden" id="selected-mode" class="selected-mode" value="<%= language %>" />
+        <input type="hidden" id="mime-type" class="mime-type" value="<%= mime %>" />
         <div id="site-container">
             <div id="header">
                 <a id="site" href="/">PasteIt!</a>
