Restored hotkey functionality
To restore the hotkeys I brought in mousetrap and moustrap
global. index.html now pulls in these scripts. In the process of
adding mousetrap I moved all of the script tags in index.html to just
before the close of body as this has become an industry best practice.

In refheap.js and create.js I exposed the codemirror editor and the
refheap module on the window object. This was necessary to keep all of
the hotkey binding in one place.

resolves macskay/pasteit#3

--- a/pasteit/views/index.ejs
+++ b/pasteit/views/index.ejs
@@ -2,17 +2,11 @@
 <html>
     <head>
         <title></title>
-        <script src="/javascripts/jquery-1.7.1.min.js" type="text/javascript"></script>
-        <script src="/javascripts/chosen.jquery.min.js" type="text/javascript"></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
         <link id="last-include" href="/stylesheets/refheap.css" rel="stylesheet" type="text/css"/>
         <link href="/javascripts/codemirror/lib/codemirror.css" rel="stylesheet" />
         <link href="/stylesheets/cmtn.css" rel="stylesheet" />
         <link href="/stylesheets/chosen.css" rel="stylesheet" type="text/css" />
-        <script src="/javascripts/codemirror/lib/codemirror.js"></script>
-        <script src="/javascripts/codemirror/mode/diff/diff.js"></script>
-        <script src="/javascripts/create.js" type="text/javascript"></script>
-        <script src="/javascripts/refheap.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="site-container">
@@ -136,5 +130,18 @@ _gaq.push(['_trackPageview']);
 })();
 //]]>
         </script>
+
+	<!-- vender scripts -->
+        <script src="/javascripts/jquery-1.7.1.min.js" type="text/javascript"></script>
+        <script src="/javascripts/chosen.jquery.min.js" type="text/javascript"></script>
+        <script src="/javascripts/codemirror/lib/codemirror.js"></script>
+        <script src="/javascripts/codemirror/mode/diff/diff.js"></script>
+	<script src="/javascripts/mousetrap.min.js" type="text/javascript"></script>
+	<script src="/javascripts/mousetrap-global-bind.min.js" type="text/javascript"></script>
+
+	<!-- package scripts -->
+        <script src="/javascripts/create.js" type="text/javascript"></script>
+	<script src="/javascripts/pastes.js" type="text/javascript"></script>
+        <script src="/javascripts/refheap.js" type="text/javascript"></script>
     </body>
 </html>
