issue #13 and #15 - Delete-Button and Code selection
Added Code Selection in paste
Added Delete Button

--- a/pasteit/public/stylesheets/refheap.css
+++ b/pasteit/public/stylesheets/refheap.css
@@ -125,7 +125,7 @@ div#paste-header {
     margin-left: 100%;
     float: right;
     overflow: visible;
-    width: 250px;
+    width: 100%;
     padding-bottom: 3px;
 }
 
