--- a/pasteit/views/index.ejs
+++ b/pasteit/views/index.ejs
@@ -11,13 +11,14 @@
         <link href="/stylesheets/chosen.css" rel="stylesheet" type="text/css" />
         <script src="/javascripts/codemirror/lib/codemirror.js"></script>
         <script src="/javascripts/codemirror/mode/diff/diff.js"></script>
+        <script src="/javascripts/globals.js" type="text/javascript"></script>
         <script src="/javascripts/create.js" type="text/javascript"></script>
         <script src="/javascripts/refheap.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="site-container">
             <div id="header">
-                <a id="site" href="/">PasteIt!</a>
+                <a id="site" href="/">PasteIt! - Just paste it</a>
                 <div class="headerlinks">
                     <div id="starting">
                         <ul class="spacedlist">
