pr #16 - applied wanted pr changes
changed value to languageKey
changed humanreadable to humanReadable
changed spacing in pasted.js
moved inline css to refheap.css

--- a/pasteit/views/pasted.ejs
+++ b/pasteit/views/pasted.ejs
@@ -37,7 +37,7 @@
                         <div id="paste-container">
                             <div id="paste-header">
                                 <p>
-                                    <a id="delete" href="/delete/" style="float: right;">Delete</a>
+                                    <a id="delete" href="/delete/" class="btn-delete">Delete</a>
                                 </p>
                                 <p id="lang-hr">Language</p>
                             </div>
