Word wrap toggle radio buttons added to UI
Word wrap is disabled by default. The user can click the radio buttons
to toggle it on and off as desired. The behavior has been manually
verified in both Chrome and Firefox.

--- a/pasteit/public/stylesheets/refheap.css
+++ b/pasteit/public/stylesheets/refheap.css
@@ -157,6 +157,12 @@ div#paste-header input[type="submit"] {
     float: right;
 }
 
+div#word-wrap-toggle {
+    -webkit-appearance: default-button;
+    float: right;
+    padding-right: 16px;
+}
+
 div#paste-header input[type="checkbox"]{
     margin-left: 15px;
 }
