--- a/pasteit/views/index.ejs
+++ b/pasteit/views/index.ejs
@@ -39,6 +39,11 @@
                                         <option selected value=""></option>
                                     </select>
                                     <input id="submit-button" value="Submit" type="submit" />
+				    <div id="word-wrap-toggle">
+				      Word Wrap
+				      <input id="radio-ww-on" name="ww-toggle" type="radio" value="enabled" /><label for="radio-ww-on">On</label>
+				      <input id="radio-ww-on" name="ww-toggle" type="radio" value="disabled" checked /><label for="radio-ww-off">Off</label>
+				    </div>
                                 </div>
                                 <textarea name="paste" id="paste"></textarea>
                             </form>
