issue #46 removed ga

--- a/pasteit/views/index.ejs
+++ b/pasteit/views/index.ejs
@@ -4,7 +4,7 @@
         <title></title>
         <script src="/javascripts/jquery-1.7.1.min.js" type="text/javascript"></script>
         <script src="/javascripts/chosen.jquery.min.js" type="text/javascript"></script>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+        <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
         <link id="last-include" href="/stylesheets/refheap.css" rel="stylesheet" type="text/css"/>
         <link href="/javascripts/codemirror/lib/codemirror.css" rel="stylesheet" />
         <link href="/stylesheets/cmtn.css" rel="stylesheet" />
@@ -38,11 +38,11 @@
                                         <option selected value=""></option>
                                     </select>
                                     <input id="submit-button" value="Submit" type="submit" />
-				    <div id="word-wrap-toggle">
-				      Word Wrap
-				      <input id="radio-ww-on" name="ww-toggle" type="radio" value="enabled" /><label for="radio-ww-on">On</label>
-				      <input id="radio-ww-on" name="ww-toggle" type="radio" value="disabled" checked /><label for="radio-ww-off">Off</label>
-				    </div>
+                        				    <div id="word-wrap-toggle">
+                        				      Word Wrap
+                        				      <input id="radio-ww-on" name="ww-toggle" type="radio" value="enabled" /><label for="radio-ww-on">On</label>
+                        				      <input id="radio-ww-on" name="ww-toggle" type="radio" value="disabled" checked /><label for="radio-ww-off">Off</label>
+                        				    </div>
                                 </div>
                                 <textarea name="paste" id="paste"></textarea>
                             </form>
@@ -51,23 +51,10 @@
                 </div>
                 <div id="footer">
                     <p class="centered">
-                    <a href="https://github.com/macskay/pasteit">PasteIt!</a> is a JavaScript adaption of
-                    <a href="https://github.com/Raynes/refheap">RefHeap</a>
+                    <a href="//github.com/macskay/pasteit">PasteIt!</a> is a JavaScript adaption of
+                    <a href="//github.com/Raynes/refheap">RefHeap</a>
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-        //<![CDATA
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-28074244-1']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-        //]]>
-        </script>
     </body>
 </html>
